--- a/requirements.txt
+++ b/requirements.txt
@@ -5,18 +5,17 @@ python=3.9
 numpy~=1.23.5
 pandas~=1.5.3
 matplotlib
-scikit-learn~=1.2.1
+scikit-learn~=1.2
 notebook
 
 
 #pip install -r req
 wave
 librosa==0.9.2
-soundfile~=0.9.0
+soundfile
 tensorflow==2.10.0
 tqdm~=4.64.1
 pyaudio~=0.2.13
 scipy~=1.10.0
 joblib~=1.2.0
 attrs~=22.1.0
-tensorflow-gpu~=2.6.0
