--- a/environ.yml
+++ b/environ.yml
@@ -1,215 +1,161 @@
-name: tf2.10.bak
+name: tf2.10
 channels:
-  - conda-forge
   - defaults
 dependencies:
-  - _tflow_select=2.1.0=gpu
-  - abseil-cpp=20210324.2=hd77b12b_0
-  - absl-py=1.3.0=py39haa95532_0
-  - aiohttp=3.8.3=py39h2bbff1b_0
-  - aiosignal=1.2.0=pyhd3eb1b0_0
-  - anyio=3.5.0=py39haa95532_0
-  - appdirs=1.4.4=pyhd3eb1b0_0
-  - argon2-cffi=21.3.0=pyhd3eb1b0_0
-  - argon2-cffi-bindings=21.2.0=py39h2bbff1b_0
-  - astor=0.8.1=py39haa95532_0
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - astunparse=1.6.3=py_0
-  - async-timeout=4.0.2=py39haa95532_0
-  - attrs=22.1.0=py39haa95532_0
-  - audioread=3.0.0=py39hcbf5309_1
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - beautifulsoup4=4.11.1=py39haa95532_0
-  - blas=1.0=mkl
-  - bleach=4.1.0=pyhd3eb1b0_0
-  - blinker=1.4=py39haa95532_0
-  - bottleneck=1.3.5=py39h080aedc_0
-  - brotlipy=0.7.0=py39h2bbff1b_1003
   - ca-certificates=2023.01.10=haa95532_0
-  - cachetools=4.2.2=pyhd3eb1b0_0
-  - certifi=2022.12.7=py39haa95532_0
-  - cffi=1.15.1=py39h2bbff1b_3
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - click=8.0.4=py39haa95532_0
-  - colorama=0.4.6=py39haa95532_0
-  - comm=0.1.2=py39haa95532_0
-  - cryptography=39.0.1=py39h21b164f_0
-  - cudatoolkit=11.3.1=h59b6b97_2
-  - cudnn=8.2.1=cuda11.3_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - debugpy=1.5.1=py39hd77b12b_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - defusedxml=0.7.1=pyhd3eb1b0_0
-  - entrypoints=0.4=py39haa95532_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - flatbuffers=2.0.0=h6c2663c_0
-  - flit-core=3.6.0=pyhd3eb1b0_0
-  - freetype=2.10.4=h546665d_1
-  - frozenlist=1.3.3=py39h2bbff1b_0
-  - gast=0.4.0=pyhd3eb1b0_0
-  - giflib=5.2.1=h8cc25b3_3
-  - google-auth=2.6.0=pyhd3eb1b0_0
-  - google-auth-oauthlib=0.4.1=py_2
-  - google-pasta=0.2.0=pyhd3eb1b0_0
-  - grpcio=1.42.0=py39hc60d5dd_0
-  - h5py=3.7.0=py39h3de5c98_0
-  - hdf5=1.10.6=h1756f20_1
-  - icc_rt=2022.1.0=h6049295_2
-  - icu=68.1=h6c2663c_0
-  - idna=3.4=py39haa95532_0
-  - importlib-metadata=6.0.0=py39haa95532_0
-  - intel-openmp=2021.4.0=haa95532_3556
-  - ipykernel=6.19.2=py39hd4e2768_0
-  - ipython=8.10.0=py39haa95532_0
-  - ipython_genutils=0.2.0=pyhd3eb1b0_1
-  - jbig=2.1=h8d14728_2003
-  - jedi=0.18.1=py39haa95532_1
-  - jinja2=3.1.2=py39haa95532_0
-  - joblib=1.2.0=pyhd8ed1ab_0
-  - jpeg=9e=h2bbff1b_1
-  - jsonschema=4.17.3=py39haa95532_0
-  - jupyter_client=7.4.9=py39haa95532_0
-  - jupyter_core=5.2.0=py39haa95532_0
-  - jupyter_server=1.23.4=py39haa95532_0
-  - jupyterlab_pygments=0.1.2=py_0
-  - keras-preprocessing=1.1.2=pyhd3eb1b0_0
-  - kiwisolver=1.4.4=py39h2e07f2f_0
-  - lcms2=2.12=h2a16943_0
-  - lerc=2.2.1=h0e60522_0
-  - libcurl=7.88.1=h86230a5_0
-  - libdeflate=1.7=h8ffe710_5
-  - libflac=1.3.4=h0e60522_0
-  - libiconv=1.16=h2bbff1b_2
-  - libogg=1.3.4=h8ffe710_1
-  - libopus=1.3.1=h8ffe710_1
-  - libpng=1.6.39=h8cc25b3_0
-  - libprotobuf=3.17.2=h23ce68f_1
-  - librosa=0.9.2=pyhd8ed1ab_0
-  - libsndfile=1.0.31=h0e60522_1
-  - libsodium=1.0.18=h62dcd97_0
-  - libssh2=1.10.0=hcd4344a_0
-  - libtiff=4.3.0=h0c97f57_1
-  - libvorbis=1.3.7=h0e60522_0
-  - libxml2=2.9.14=h0ad7f3c_0
-  - libxslt=1.1.35=h2bbff1b_0
-  - llvmlite=0.39.1=py39h23ce68f_0
-  - lxml=4.9.1=py39h1985fb9_0
-  - lz4-c=1.9.3=h8ffe710_1
-  - markdown=3.4.1=py39haa95532_0
-  - markupsafe=2.1.1=py39h2bbff1b_0
-  - matplotlib-base=3.4.3=py39h581301d_2
-  - matplotlib-inline=0.1.6=py39haa95532_0
-  - mistune=0.8.4=py39h2bbff1b_1000
-  - mkl=2021.4.0=haa95532_640
-  - mkl-service=2.4.0=py39h2bbff1b_0
-  - mkl_fft=1.3.1=py39h277e83a_0
-  - mkl_random=1.2.2=py39hf11a4ad_0
-  - multidict=6.0.2=py39h2bbff1b_0
-  - nbclassic=0.5.2=py39haa95532_0
-  - nbclient=0.5.13=py39haa95532_0
-  - nbconvert=6.5.4=py39haa95532_0
-  - nbformat=5.7.0=py39haa95532_0
-  - nest-asyncio=1.5.6=py39haa95532_0
-  - notebook=6.5.2=py39haa95532_0
-  - notebook-shim=0.2.2=py39haa95532_0
-  - numba=0.56.4=py39hf11a4ad_0
-  - numexpr=2.8.4=py39h5b0cc5e_0
-  - numpy=1.23.5=py39h3b20f71_0
-  - numpy-base=1.23.5=py39h4da318b_0
-  - oauthlib=3.2.1=py39haa95532_0
-  - olefile=0.46=pyh9f0ad1d_1
-  - openjpeg=2.4.0=hb211442_1
   - openssl=1.1.1t=h2bbff1b_0
-  - opt_einsum=3.3.0=pyhd3eb1b0_1
-  - packaging=23.0=py39haa95532_0
-  - pandas=1.5.3=py39hf11a4ad_0
-  - pandocfilters=1.5.0=pyhd3eb1b0_0
-  - parso=0.8.3=pyhd3eb1b0_0
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=8.3.2=py39h916092e_0
   - pip=23.0.1=py39haa95532_0
-  - platformdirs=2.5.2=py39haa95532_0
-  - pooch=1.4.0=pyhd3eb1b0_0
-  - prometheus_client=0.14.1=py39haa95532_0
-  - prompt-toolkit=3.0.36=py39haa95532_0
-  - protobuf=3.17.2=py39hd77b12b_0
-  - psutil=5.9.0=py39h2bbff1b_0
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pyasn1=0.4.8=pyhd3eb1b0_0
-  - pyasn1-modules=0.2.8=py_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.11.2=pyhd3eb1b0_0
-  - pyjwt=2.4.0=py39haa95532_0
-  - pyopenssl=23.0.0=py39haa95532_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pyrsistent=0.18.0=py39h196d8e1_0
-  - pysocks=1.7.1=py39haa95532_0
   - python=3.9.16=h6244533_2
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python-fastjsonschema=2.16.2=py39haa95532_0
-  - python-flatbuffers=1.12=pyhd3eb1b0_0
-  - python_abi=3.9=2_cp39
-  - pytz=2022.7=py39haa95532_0
-  - pywin32=305=py39h2bbff1b_0
-  - pywinpty=2.0.10=py39h5da7b33_0
-  - pyzmq=23.2.0=py39hd77b12b_0
-  - requests=2.28.1=py39haa95532_1
-  - requests-oauthlib=1.3.0=py_0
-  - resampy=0.4.2=pyhd8ed1ab_0
-  - rsa=4.7.2=pyhd3eb1b0_1
-  - scikit-learn=1.2.1=py39hd77b12b_0
-  - scipy=1.10.0=py39h321e85e_1
-  - send2trash=1.8.0=pyhd3eb1b0_1
-  - setuptools=65.6.3=py39haa95532_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - snappy=1.1.9=h6c2663c_0
-  - sniffio=1.2.0=py39haa95532_1
-  - soupsieve=2.3.2.post1=py39haa95532_0
-  - sqlite=3.41.1=h2bbff1b_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - tbb=2021.7.0=h59b6b97_0
-  - tensorboard-data-server=0.6.1=py39haa95532_0
-  - tensorboard-plugin-wit=1.8.1=py39haa95532_0
-  - tensorflow-gpu=2.6.0=h17022bd_0
-  - termcolor=2.1.0=py39haa95532_0
-  - terminado=0.17.1=py39haa95532_0
-  - threadpoolctl=3.1.0=pyh8a188c0_0
-  - tinycss2=1.2.1=py39haa95532_0
-  - tk=8.6.12=h8ffe710_0
-  - tornado=6.2=py39h2bbff1b_0
-  - tqdm=4.64.1=py39haa95532_0
-  - traitlets=5.7.1=py39haa95532_0
-  - typing-extensions=4.4.0=py39haa95532_0
-  - typing_extensions=4.4.0=py39haa95532_0
-  - tzdata=2022g=h04d1e81_0
-  - urllib3=1.26.14=py39haa95532_0
+  - setuptools=66.0.0=py39haa95532_0
+  - sqlite=3.41.2=h2bbff1b_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - webencodings=0.5.1=py39haa95532_1
-  - websocket-client=0.58.0=py39haa95532_4
-  - werkzeug=2.2.2=py39haa95532_0
-  - wheel=0.35.1=pyhd3eb1b0_0
-  - win_inet_pton=1.1.0=py39haa95532_0
-  - wincertstore=0.2=py39haa95532_2
-  - winpty=0.4.3=4
-  - wrapt=1.14.1=py39h2bbff1b_0
-  - xz=5.2.6=h8d14728_0
-  - yarl=1.8.1=py39h2bbff1b_0
-  - zeromq=4.3.4=hd77b12b_0
-  - zipp=3.11.0=py39haa95532_0
-  - zlib=1.2.13=h8cc25b3_0
-  - zstd=1.5.0=h6255e5f_0
+  - wheel=0.38.4=py39haa95532_0
   - pip:
+      - absl-py==1.4.0
+      - anyio==3.6.2
+      - argon2-cffi==21.3.0
+      - argon2-cffi-bindings==21.2.0
+      - arrow==1.2.3
+      - asttokens==2.2.1
+      - astunparse==1.6.3
+      - attrs==23.1.0
+      - audioread==3.0.0
+      - backcall==0.2.0
+      - beautifulsoup4==4.12.2
+      - bleach==6.0.0
+      - cachetools==5.3.0
+      - certifi==2022.12.7
+      - cffi==1.15.1
+      - charset-normalizer==3.1.0
+      - colorama==0.4.6
+      - comm==0.1.3
+      - contourpy==1.0.7
+      - cycler==0.11.0
+      - debugpy==1.6.7
+      - decorator==5.1.1
+      - defusedxml==0.7.1
+      - executing==1.2.0
+      - fastjsonschema==2.16.3
+      - flatbuffers==23.3.3
+      - fonttools==4.39.3
+      - fqdn==1.5.1
+      - gast==0.4.0
+      - google-auth==2.17.3
+      - google-auth-oauthlib==0.4.6
+      - google-pasta==0.2.0
+      - grpcio==1.54.0
+      - h5py==3.8.0
+      - idna==3.4
+      - importlib-metadata==6.6.0
+      - importlib-resources==5.12.0
+      - ipdb==0.13.13
+      - ipykernel==6.22.0
+      - ipython==8.12.0
+      - ipython-genutils==0.2.0
+      - isoduration==20.11.0
+      - jedi==0.18.2
+      - jinja2==3.1.2
+      - joblib==1.2.0
+      - jsonpointer==2.3
+      - jsonschema==4.17.3
+      - jupyter-client==8.2.0
+      - jupyter-core==5.3.0
+      - jupyter-events==0.6.3
+      - jupyter-server==2.5.0
+      - jupyter-server-terminals==0.4.4
+      - jupyterlab-pygments==0.2.2
       - keras==2.10.0
-      - libclang==15.0.6.1
-      - pyside6==6.4.2
-      - pyside6-addons==6.4.2
-      - pyside6-essentials==6.4.2
-      - shiboken6==6.4.2
-      - soundfile==0.9.0
+      - keras-preprocessing==1.1.2
+      - kiwisolver==1.4.4
+      - libclang==16.0.0
+      - librosa==0.9.2
+      - llvmlite==0.39.1
+      - markdown==3.4.3
+      - markupsafe==2.1.2
+      - matplotlib==3.7.1
+      - matplotlib-inline==0.1.6
+      - mistune==2.0.5
+      - nbclassic==0.5.5
+      - nbclient==0.7.4
+      - nbconvert==7.3.1
+      - nbformat==5.8.0
+      - nest-asyncio==1.5.6
+      - notebook==6.5.4
+      - notebook-shim==0.2.3
+      - numba==0.56.4
+      - numpy==1.23.5
+      - oauthlib==3.2.2
+      - opt-einsum==3.3.0
+      - packaging==23.1
+      - pandas==2.0.1
+      - pandocfilters==1.5.0
+      - parso==0.8.3
+      - pickleshare==0.7.5
+      - pillow==9.5.0
+      - platformdirs==3.4.0
+      - playsound==1.3.0
+      - pluggy==1.0.0
+      - pooch==1.7.0
+      - prometheus-client==0.16.0
+      - prompt-toolkit==3.0.38
+      - protobuf==3.19.6
+      - psgdemos==1.12.1
+      - psutil==5.9.5
+      - pure-eval==0.2.2
+      - pyasn1==0.5.0
+      - pyasn1-modules==0.3.0
+      - pyaudio==0.2.13
+      - pycparser==2.21
+      - pydub==0.25.1
+      - pygments==2.15.1
+      - pyparsing==3.0.9
+      - pyrsistent==0.19.3
+      - pysimplegui==4.60.4
+      - python-dateutil==2.8.2
+      - python-json-logger==2.0.7
+      - pytz==2023.3
+      - pywin32==306
+      - pywinpty==2.0.10
+      - pyyaml==6.0
+      - pyzmq==25.0.2
+      - requests==2.29.0
+      - requests-oauthlib==1.3.1
+      - resampy==0.4.2
+      - rfc3339-validator==0.1.4
+      - rfc3986-validator==0.1.1
+      - rsa==4.9
+      - scikit-learn==1.2.2
+      - scipy==1.10.1
+      - send2trash==1.8.0
+      - six==1.16.0
+      - sniffio==1.3.0
+      - soundfile==0.12.1
+      - soupsieve==2.4.1
+      - stack-data==0.6.2
       - tensorboard==2.10.1
+      - tensorboard-data-server==0.6.1
+      - tensorboard-plugin-wit==1.8.1
       - tensorflow==2.10.0
       - tensorflow-estimator==2.10.0
       - tensorflow-io-gcs-filesystem==0.31.0
-prefix: d:\condaPythonEnvs\tf2.10.bak
+      - termcolor==2.3.0
+      - terminado==0.17.1
+      - threadpoolctl==3.1.0
+      - tinycss2==1.2.1
+      - tornado==6.3.1
+      - tqdm==4.65.0
+      - traitlets==5.9.0
+      - typing-extensions==4.5.0
+      - tzdata==2023.3
+      - uri-template==1.2.0
+      - urllib3==1.26.15
+      - wave==0.0.2
+      - wcwidth==0.2.6
+      - webcolors==1.13
+      - webencodings==0.5.1
+      - websocket-client==1.5.1
+      - werkzeug==2.3.0
+      - wrapt==1.15.0
+      - zipp==3.15.0
+prefix: d:\condaPythonEnvs\tf2.10
