- "update the client layout with more available parameters cross-validation(`kfold`/`shufflesplit`/`StratifiedShuffleSplit`) - support the `n_splits` as a slider element for use to adjust the folds - update the `confusion matrix table`show button

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,9 @@
     "python.linting.pylintEnabled": true,
     "git.ignoreLimitWarning": true,
     "python.linting.lintOnSave": false,
-    "python.analysis.typeCheckingMode": "off"
+    "python.analysis.typeCheckingMode": "off",
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
+    "python.formatting.provider": "none"
 }
