--- a/environ.yml
+++ b/environ.yml
@@ -1,13 +1,20 @@
 name: tf2.10
 channels:
+  - conda-forge
   - defaults
 dependencies:
-  - ca-certificates=2023.01.10=haa95532_0
+  - ca-certificates=2022.12.7=h5b45459_0
+  - colorama=0.4.6=py39haa95532_0
+  - cudatoolkit=11.2.2=h933977f_10
+  - cudnn=8.1.0.77=h3e0f4f4_0
+  - mypy_extensions=0.4.3=py39haa95532_1
   - openssl=1.1.1t=h2bbff1b_0
   - pip=23.0.1=py39haa95532_0
   - python=3.9.16=h6244533_2
   - setuptools=66.0.0=py39haa95532_0
   - sqlite=3.41.2=h2bbff1b_0
+  - tomli=2.0.1=py39haa95532_0
+  - typing_extensions=4.5.0=py39haa95532_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
   - wheel=0.38.4=py39haa95532_0
@@ -23,12 +30,14 @@ dependencies:
       - audioread==3.0.0
       - backcall==0.2.0
       - beautifulsoup4==4.12.2
+      - black==23.3.0
       - bleach==6.0.0
       - cachetools==5.3.0
       - certifi==2022.12.7
       - cffi==1.15.1
       - charset-normalizer==3.1.0
-      - colorama==0.4.6
+      - click==8.1.3
+      - cloudpickle==2.2.1
       - comm==0.1.3
       - contourpy==1.0.7
       - cycler==0.11.0
@@ -46,7 +55,9 @@ dependencies:
       - google-pasta==0.2.0
       - grpcio==1.54.0
       - h5py==3.8.0
+      - html2text==2020.1.16
       - idna==3.4
+      - imageio==2.28.1
       - importlib-metadata==6.6.0
       - importlib-resources==5.12.0
       - ipdb==0.13.13
@@ -71,15 +82,19 @@ dependencies:
       - libclang==16.0.0
       - librosa==0.9.2
       - llvmlite==0.39.1
+      - lxml==4.9.2
       - markdown==3.4.3
       - markupsafe==2.1.2
       - matplotlib==3.7.1
       - matplotlib-inline==0.1.6
+      - mglearn==0.1.9
       - mistune==2.0.5
+      - mypy-extensions==1.0.0
       - nbclassic==0.5.5
       - nbclient==0.7.4
       - nbconvert==7.3.1
       - nbformat==5.8.0
+      - nbmanips==2.0.1
       - nest-asyncio==1.5.6
       - notebook==6.5.4
       - notebook-shim==0.2.3
@@ -91,6 +106,7 @@ dependencies:
       - pandas==2.0.1
       - pandocfilters==1.5.0
       - parso==0.8.3
+      - pathspec==0.11.1
       - pickleshare==0.7.5
       - pillow==9.5.0
       - platformdirs==3.4.0
@@ -111,6 +127,9 @@ dependencies:
       - pygments==2.15.1
       - pyparsing==3.0.9
       - pyrsistent==0.19.3
+      - pyside6==6.5.0
+      - pyside6-addons==6.5.0
+      - pyside6-essentials==6.5.0
       - pysimplegui==4.60.4
       - python-dateutil==2.8.2
       - python-json-logger==2.0.7
@@ -127,7 +146,9 @@ dependencies:
       - rsa==4.9
       - scikit-learn==1.2.2
       - scipy==1.10.1
+      - seaborn==0.12.2
       - send2trash==1.8.0
+      - shiboken6==6.5.0
       - six==1.16.0
       - sniffio==1.3.0
       - soundfile==0.12.1
@@ -146,7 +167,6 @@ dependencies:
       - tornado==6.3.1
       - tqdm==4.65.0
       - traitlets==5.9.0
-      - typing-extensions==4.5.0
       - tzdata==2023.3
       - uri-template==1.2.0
       - urllib3==1.26.15
